Added an editor using react-editor-js, the post css is to be made

--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "cors": "^2.8.5",
+    "draftjs-to-html": "^0.9.1",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19"
   },
   "devDependencies": {
+    "@editorjs/editorjs": "^2.18.0",
+    "@editorjs/paragraph": "^2.7.0",
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "react-editor-js": "^1.6.2"
   }
 }
