--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/editorjs": "^2.18.0",
+    "@editorjs/header": "^2.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "draft-js": "^0.11.6",
+    "draft-js-export-html": "^1.4.1",
     "html-react-parser": "^0.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -24,7 +28,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://127.0.0.1:5000",
+  "secure": "false",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -39,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@editorjs/code": "^2.5.0",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/simple-image": "^1.3.3"
   }
 }
