--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1",
     "uuid": "^8.1.0"
   },
   "scripts": {
