--- a/package.json
+++ b/package.json
@@ -27,11 +27,9 @@
     "draftjs-to-html": "^0.9.1",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
-    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
-    "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@editorjs/editorjs": "^2.18.0",
