--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,10 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "@editorjs/code": "^2.5.0",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/simple-image": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
