--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/code": "^2.5.0",
     "@editorjs/editorjs": "^2.18.0",
     "@editorjs/header": "^2.5.0",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/simple-image": "^1.3.3",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -21,10 +25,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
-    "uuid": "^8.1.0",
-    "@editorjs/code": "^2.5.0",
-    "@editorjs/inline-code": "^1.3.1",
-    "@editorjs/simple-image": "^1.3.3"
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
