--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.22.0",
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -29,7 +30,8 @@
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "@editorjs/editorjs": "^2.18.0",
