--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
+    "framer-motion": "^2.7.7",
     "html-react-parser": "^0.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
