--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@editorjs/code": "^2.5.0",
-    "@editorjs/editorjs": "^2.18.0",
-    "@editorjs/header": "^2.5.0",
-    "@editorjs/inline-code": "^1.3.1",
-    "@editorjs/simple-image": "^1.3.3",
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -50,9 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@editorjs/code": "^2.5.0",
-    "@editorjs/inline-code": "^1.3.1",
-    "@editorjs/simple-image": "^1.3.3"
-  }
+  "devDependencies": {}
 }
